--- a/ETW2SQLite.csproj
+++ b/ETW2SQLite.csproj
@@ -52,7 +52,9 @@
     <Compile Include="TableColumn.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="LICENSE" />
     <None Include="packages.config" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="sqlite3.dll">
